--- a/backend/src/main/webapp/app/views/working/tab_6.html
+++ b/backend/src/main/webapp/app/views/working/tab_6.html
@@ -1,5 +1,5 @@
 
-<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1); margin-bottom: 3px;">
 	<form class="form-inline" ng-submit="search()">
 	
 	  <div class="form-group input-group">
@@ -22,7 +22,7 @@
 	</form>
 </div>
 
-<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px;">
+<div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px; margin-bottom: 3px;">
 	<span class="input-group-addon" style="border: 0px; background: none;">
 		{{'pagination.page' | translate}}: {{formData.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ totalItems | number:0 }} {{'pagination.items' | translate}})
 	</span>
