--- a/backend/src/main/webapp/app/views/notice/main.html
+++ b/backend/src/main/webapp/app/views/notice/main.html
@@ -90,8 +90,6 @@
 			                        </div>
 			                        <div class="col-lg-6">
 				                        <input type="file" class="form-control pull-left" style="width: 300px;" nv-file-select="" uploader="uploader" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />	  
-				                        
-			                        	<button class="btn btn-primary pull-right" type="button" ng-click="showOthersUploadMenu()">นำเข้าข้อมูลเสริม</button>
 			                        </div>
 		                        </div>
 		                    </div>
@@ -122,9 +120,9 @@
 							<thead>
 								<tr>
 									<th width="10%">ลำดับที่</th>
-									<th width="50%">ชื่อไฟล์</th>
-									<th width="10%">จำนวนเคส</th>
-									<th width="20%">วันที่นำเข้า</th>
+									<th width="40%">ชื่อไฟล์</th>
+									<th width="20%">ชื่อแบบฟอร์ม</th>
+									<th width="10%">วันที่นำเข้า</th>
 									<th width="10%"></th>									
 								</tr>
 							<thead>
