--- a/backend/src/main/webapp/app/views/notice/main.html
+++ b/backend/src/main/webapp/app/views/notice/main.html
@@ -122,8 +122,8 @@
 									<th width="10%">ลำดับที่</th>
 									<th width="40%">ชื่อไฟล์</th>
 									<th width="20%">ชื่อแบบฟอร์ม</th>
-									<th width="20%">วันที่นำเข้า</th>
-									<th width="10%"></th>									
+									<th width="15%">วันที่นำเข้า</th>
+									<th width="15%"></th>									
 								</tr>
 							<thead>
 							<tbody>
@@ -132,20 +132,20 @@
 									<td>{{ data.fileName }}</td>
 									<!-- <td>{{ data.templateName }}</td> -->
 									<td>
-										<a href="#" e-class="form-control" buttons="no" onaftersave="update()" editable-text="data.templateName">
-											{{ data.templateName }}
+										<a href="#" e-class="form-control" buttons="no" onaftersave="updateTemplateName(data)" editable-text="data.templateName">
+											{{ data.templateName || 'empty'}}
 										</a>
 									</td>
 									<td>{{ data.createdDateTime | date:format }}</td>
 									<td>
 										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp;
-										<i class="fa fa-bars fa-lg user-action-icon-primary" ng-click="viewDetail(data.id)"></i>
+										<i class="fa fa-lg" ng-class="{'fa-check-circle': data.enabled, 'fa-minus-circle': !data.enabled, 'user-action-icon-primary': data.enabled, 'user-action-icon-danger': !data.enabled}" ng-click="updateEnabled(data)"></i>&emsp;
+										<i class="fa fa-download fa-lg user-action-icon-primary" ng-click="download(data.id)"></i>
 									</td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
-					
 					
 				</div>
                 <div class="panel-footer"></div>
