--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -33,14 +33,16 @@
 			                    dnd-dragend="dndDragend('Drag operation ended', event)"
 			                    ng-class="{liactive: item.isActive == 1, liinactive: item.isActive == 0}">
 			                    
-			                    <input class="pull-left" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
+			                    <input class="pull-left" title="เปิด/ปิด การแสดงผล" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
 			                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span><br /> 
+			                    <input class="pull-left" title="เปิด/ปิด Notice" type="checkbox" ng-model="item.isNotice" ng-change="updateNotice(item)">
 			                    
 			                    <a href="#" e-class="form-control" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
 			                       
 			                    <a href="#" e-class="form-control" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnNameAlias"><small>{{ item.columnNameAlias || '-' }}</small></a>
+			                       
 			                </li>
 			            </ul>
 			            <div class="clearfix"></div>
