--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -12,12 +12,13 @@
 				<div class="col-lg-5 mayfender" style="text-align: right; margin: 0; padding-right: 6px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word;">
 					<span>{{ f.columnNameAlias || f.columnName }}: </span>
 				</div>
-				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;">
-					{{ 
-					   f.dataType == 'sys_owner' ? taskDetail[f.columnName][0].showname :
-					   f.dataType == 'date' ? (taskDetail[f.columnName] | date:format) : 
-					   f.dataType == 'num' ? (taskDetail[f.columnName] | number:2) : taskDetail[f.columnName] 
-					}}
+				<div class="col-lg-7" style="padding: 0; background-color: #356190; border-top: 1px solid #234E7C;"
+					 ng-style="f.isNotice ? {'cursor': 'pointer'} : {}" ng-click="f.isNotice ? noticeMenu() : ''">
+						{{ 
+						   f.dataType == 'sys_owner' ? taskDetail[f.columnName][0].showname :
+						   f.dataType == 'date' ? (taskDetail[f.columnName] | date:format) : 
+						   f.dataType == 'num' ? (taskDetail[f.columnName] | number:2) : taskDetail[f.columnName] 
+						}}
 				</div> 
 			</div>
 			<div style="clear: both;"></div>
@@ -32,3 +33,34 @@
 	</div>
 	<div class="col-lg-12" style="min-height: 150px;" ng-include="lastTabActionMenuActive.url"></div>
 </div>
+
+
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="dismissModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">แบบฟอร์ม Notice</h4>
+            </div>
+            <div class="modal-body">            	    	
+				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+				  <div class="panel-body">
+				  	<div class="row" ng-repeat="file in files"> 
+				  		<div class="col-lg-12" style="text-align: center;">
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="gotoImportOthers(item, 'search')">{{ file.templateName }}</button>
+				  		</div>
+				  	</div>
+				  </div>
+				</div>
+            </div>
+           	<div class="modal-footer">
+				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
+			</div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
