--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -51,7 +51,7 @@
 				  <div class="panel-body">
 				  	<div class="row" ng-repeat="file in files"> 
 				  		<div class="col-lg-12" style="text-align: center;">
-						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="gotoImportOthers(item, 'search')">{{ file.templateName }}</button>
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id)">{{ file.templateName }}</button>
 				  		</div>
 				  	</div>
 				  </div>
