--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -38,7 +38,7 @@
 					</div>
 				</div>
 				<div class="col-lg-6">
-					<div class="form-group">
+					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
 					
 						<label class="control-label">ชื่อ</label>
 						<div class="input-group">
@@ -48,13 +48,13 @@
 						          <li ng-repeat="t in nameTitles"><a href="" ng-click="changeTitle(t)">{{ t }}</a></li>
 						        </ul>
 							</div>						
-							<input name="firstName" class="form-control" ng-model="user.firstName">
+							<input name="firstName" class="form-control" ng-model="user.firstName" required>
 						</div>
 						
 					</div>
-					<div class="form-group">
+					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
 						<label class="control-label">สกุล</label>
-						<input name="lastName" class="form-control" ng-model="user.lastName">
+						<input name="lastName" class="form-control" ng-model="user.lastName" required>
 					</div>
 					<div class="form-group">
 						<label class="control-label">เบอร์โทร</label>
