--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -84,12 +84,32 @@
 						  </div>
 					  </div>
 					  <div class="col-lg-6">
-						  <div class="form-group">
+					  
+					  
+						  <!-- <div class="form-group">
 							<label class="control-label">นัด call</label>
 						  	<select name="column" class="form-control" ng-model="formData.keyword" ng-options="option.username as option.showname for option in users">
 								<option value="">--งานว่าง--</option>
 					  		</select>
-						  </div>
+						  </div> -->
+						  <div class="form-group">
+			                <label class="control-label">วันเดือนปีเกิด</label>
+			                <code style="position: absolute; right: 15px;">DD/MM/YYYY</code>
+			                <div class="input-group">
+								<input type="text" tabindex="8" name="birthday" class="form-control" 
+									   data-provide="datepicker" date-parser="dd/MM/yyyy" 
+									   data-date-format="dd/mm/yyyy"
+									   data-date-autoclose="true"
+									   data-date-today-btn="true"
+									   data-date-today-highlight="true"
+									   data-date-language="th-th" ng-model="birthday">
+			                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+			                </div>
+						</div>
+								  
+						  
+						  
+						  
 						  <div class="form-group">
 							<label class="control-label">Res. Code</label>
 							<select name="column" class="form-control" ng-model="formData.keyword" ng-options="option.username as option.showname for option in users">
