--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -26,6 +26,7 @@
 				<th style="text-align: center;">ผลการติดตาม</th>
 				<th style="text-align: center;">เบอร์โทร</th>
 				<th style="text-align: center;">วันนัด</th>
+				<th style="text-align: center;">วันที่ทำครั้งต่อไป</th>
 				<th style="text-align: center;">Act. Code</th>
 				<th style="text-align: center;">Res. Code</th>
 				<th style="text-align: center;">ผู้บันทึก</th>
@@ -97,7 +98,7 @@
 							</div>
 							
 							  <div class="form-group" ng-class="{'has-error':saveAskModalForm.actionCode.$invalid}">
-								<label class="control-label">Act. Code</label>
+								<label class="control-label">Action Code</label>
 								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.username as option.showname for option in users" required>
 									<option value="">--Action Code--</option>
 						  		</select>
@@ -124,7 +125,7 @@
 							
 							  
 							  <div class="form-group" ng-class="{'has-error':saveAskModalForm.resultCode.$invalid}">
-								<label class="control-label">Res. Code</label>
+								<label class="control-label">Result Code</label>
 								<div class="input-group">
 									<div class="input-group-btn">
 								        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ askModalObj.init.resultGroup }} <span class="caret"></span></button>
