--- a/backend/src/main/webapp/app/views/action_code/main.html
+++ b/backend/src/main/webapp/app/views/action_code/main.html
@@ -35,8 +35,8 @@
 							<table class="table table-striped table-hover">
 								<thead>
 									<tr>
-										<th style="width: 15%;">รหัส</th>
-										<th style="width: 30%;">คำอธิบาย</th>
+										<th style="width: 15%;">ตัวย่อ</th>
+										<th style="width: 30%;">ประโยคเต็ม</th>
 										<th style="width: 30%;">ความหมาย</th>
 										<th style="width: 10%;">สถานะ</th>
 										<th style="width: 15%;"></th>
@@ -53,7 +53,7 @@
 								      	<td style="vertical-align: middle;">
 									        <span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span>
 								      	</td>
-								      	<td>
+								      	<td style="vertical-align: middle;">
 								      		<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses">
 												<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i>
 												<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
