--- a/backend/src/main/webapp/app/views/result_code/main.html
+++ b/backend/src/main/webapp/app/views/result_code/main.html
@@ -10,11 +10,68 @@
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <i class="fa fa-users fa-fw"></i> ตั้งค่า Result Code
+                    <div class="btn-group pull-right" ng-if="authority == 'ROLE_SUPERADMIN'">
+			            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+			            	<i class="fa fa-chevron-down"></i>
+			            </button>
+			            <ul class="dropdown-menu slidedown">
+			                <li ng-repeat="u in products">
+			                    <a href="" ng-click="changeProduct(u)">{{ u.productName }}</a>
+			                </li>
+			            </ul>
+			        </div>
+			        <span class="pull-right">{{ product.productName }}&nbsp&nbsp</span>
                 </div>
                 <div class="panel-body">
                 
                 
-                
+                	<div class="col-lg-12">
+                		<div class="table-responsive">	
+							<table class="table table-striped table-hover">
+								<thead>
+									<tr>
+										<th style="width: 15%;">ตัวย่อ</th>
+										<th style="width: 30%;">ประโยคเต็ม</th>
+										<th style="width: 30%;">ความหมาย</th>
+										<th style="width: 10%;">สถานะ</th>
+										<th style="width: 15%;"></th>
+									</tr>
+								<thead>
+								<tbody>
+									<tr ng-repeat="item in items">
+										<td style="vertical-align: middle;">
+									        <span editable-text="item.code" e-name="code" e-form="rowform">{{ item.code }}</span>
+								      	</td>
+								      	<td style="vertical-align: middle;">
+									        <span editable-text="item.desc" e-name="desc" e-form="rowform">{{ item.desc }}</span>
+								      	</td>
+								      	<td style="vertical-align: middle;">
+									        <span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span>
+								      	</td>
+								      	<td style="vertical-align: middle;">
+								      		<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses">
+												<i class="fa fa-check-circle fa-lg user-status-enabled-icon" ng-show="item.enabled"></i>
+												<i class="fa fa-minus-circle fa-lg user-status-disabled-icon" ng-hide="item.enabled"></i>
+									        </span>
+								      	</td>
+								      	<td>
+								      		<form editable-form name="rowform" onbeforesave="saveItem($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
+									          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
+									          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewItem(item)" class="btn btn-default">ยกเลิก</button>
+									        </form>
+									        <div class="buttons" ng-show="!rowform.$visible">
+									          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
+									          <button class="btn btn-danger" ng-click="removeItem($index, item.id)">ลบ</button>
+									        </div>  
+								      	</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						
+						<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
+					
+					</div>
                 
                 	
                 </div>
