Add resultCodeGroup feature

--- a/backend/src/main/webapp/app/views/action_code/main.html
+++ b/backend/src/main/webapp/app/views/action_code/main.html
@@ -74,7 +74,7 @@
 							</table>
 						</div>
 						
-						<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
+						<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
 					
 					</div>
 					
