--- a/backend/src/main/webapp/app/views/result_code/main.html
+++ b/backend/src/main/webapp/app/views/result_code/main.html
@@ -30,9 +30,10 @@
 							<table class="table table-striped table-hover">
 								<thead>
 									<tr>
-										<th style="width: 15%;">ตัวย่อ</th>
-										<th style="width: 30%;">ประโยคเต็ม</th>
-										<th style="width: 30%;">ความหมาย</th>
+										<th style="width: 9%;">ตัวย่อ</th>
+										<th style="width: 28%;">ประโยคเต็ม</th>
+										<th style="width: 28%;">ความหมาย</th>
+										<th style="width: 10%;">กรุ๊ป</th>
 										<th style="width: 10%;">สถานะ</th>
 										<th style="width: 15%;"></th>
 									</tr>
@@ -47,6 +48,11 @@
 								      	</td>
 								      	<td style="vertical-align: middle;">
 									        <span editable-text="item.meaning" e-name="meaning" e-form="rowform">{{ item.meaning }}</span>
+								      	</td>
+								      	<td>
+								      		<span editable-select="item.resultGroupId" e-name="resultGroupId" e-form="rowform" e-ng-options="g.id as g.name for g in resultCodeGroups">
+									          {{ (resultCodeGroups | filter:{id:item.resultGroupId})[0].name }}
+									        </span>
 								      	</td>
 								      	<td style="vertical-align: middle;">
 								      		<span editable-radiolist="item.enabled" e-name="enabled" e-form="rowform" e-ng-options="s.value as s.text for s in statuses">
@@ -69,14 +75,56 @@
 							</table>
 						</div>
 						
-						<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
+						<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="resultCodeGroupModal()"><i class="fa fa-cubes"></i></button>
+						<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()"><i class="fa fa-plus-square"></i></button>
 					
 					</div>
-                
-                	
                 </div>
                 <div class="panel-footer"></div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content">
+         	<div class="modal-header">
+                <button type="button" class="close" ng-click="dismissModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Result Code Group</h4>
+            </div>
+            <div class="modal-body">            	    	
+				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
+				  <div class="panel-body">
+				  
+				  
+				  	<div class="row" ng-repeat="item in resultCodeGroups"> 
+				  		<div class="col-lg-8" style="text-align: center;">
+						  	<button class="btn btn-primary col-lg-12" type="button" style="margin-bottom: 3px; cursor: default;"
+						  	        editable-text="item.name" e-style="margin-bottom: 3px; min-width: 300px;" e-name="name" e-form="rowform">{{ item.name }}</button>
+				  		</div>
+				  		<div class="col-lg-4">
+				  			<form editable-form name="rowform" onbeforesave="saveGroup($data, item, $index)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == item">
+					          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-success">บันทึก</button>
+					          <button type="button" ng-disabled="rowform.$waiting" ng-click="item.id != null ? rowform.$cancel() : cancelNewGroup(item)" class="btn btn-default">ยกเลิก</button>
+					        </form>
+					        <div class="buttons" ng-show="!rowform.$visible">
+					          <button class="btn btn-info" ng-click="rowform.$show()">แก้ใข</button>
+					          <button class="btn btn-danger" ng-click="removeGroup($index, item.id)">ลบ</button>
+					        </div>  
+				  		</div>
+				  	</div>
+				  	
+				  	<button type="button" class="btn btn-warning btn-circle btn-sm" ng-click="addGroup()"><i class="fa fa-plus-square"></i></button>
+				  	
+				  </div>
+				</div>
+            </div>
+           	<div class="modal-footer">
+				<button type="button" class="btn btn-default" ng-click="dismissModal()">ปิด</button>
+			</div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
