--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -96,14 +96,7 @@
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 				                </div>
 							</div>
-							
-							  <div class="form-group" ng-class="{'has-error':saveAskModalForm.actionCode.$invalid}">
-								<label class="control-label">Action Code</label>
-								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.code +' / '+ option.meaning for option in askModalObj.init.actionCodes" required>
-									<option value="">--Action Code--</option>
-						  		</select>
-							  </div>
-							  
+						
 						  </div>
 						  <div class="col-lg-6">					  
 						  
@@ -122,9 +115,16 @@
 							    </div>
 							</div>
 					
+						  </div>
+						  <div class="col-lg-12">
+						  	<div class="form-group" ng-class="{'has-error':saveAskModalForm.actionCode.$invalid}">
+								<label class="control-label">Action Code</label>
+								<select name="actionCode" class="form-control" ng-model="askModalObj.trace.actionCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.actionCodes" required>
+									<option value="">--Action Code--</option>
+						  		</select>
+							</div>
 							
-							  
-							  <div class="form-group" ng-class="{'has-error':saveAskModalForm.resultCode.$invalid}">
+							<div class="form-group" ng-class="{'has-error':saveAskModalForm.resultCode.$invalid}">
 								<label class="control-label">Result Code</label>
 								<div class="input-group">
 									<div class="input-group-btn">
@@ -133,19 +133,13 @@
 								          <li ng-repeat="gp in askModalObj.init.resultCodeGroups"><a href="" ng-click="askModalObj.changeResultGroups(gp)">{{ gp.name }}</a></li>
 								        </ul>
 									</div>	
-									<select name="resultCode" class="form-control" ng-model="askModalObj.trace.resultCode" ng-options="option.id as option.code +' / '+ option.meaning for option in askModalObj.init.resultCodes" required>
+									<select name="resultCode" class="form-control" ng-model="askModalObj.trace.resultCode" ng-options="option.id as option.meaning + ' [' + option.code + ']' for option in askModalObj.init.resultCodes" required>
 										<option value="">--Result Code--</option>
 							  		</select>
 						  		</div>
 							  </div>
-							  
 						  </div>
 					  </div>
-					
-					
-					
-					
-					
 					
 				  	
 				  </div>
