--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -36,8 +36,8 @@
 			                    <input class="pull-left" title="เปิด/ปิด การแสดงผล" type="checkbox" ng-model="item.isActive" ng-change="update(item)">
 			                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span>
 			                    <input class="pull-left" title="เปิด/ปิด Notice" type="checkbox" ng-model="item.isNotice" ng-change="updateNotice(item)">
-			                    <!-- <input class="pull-left" title="เลขที่สัญญา" name="isContractNo" type="radio" ng-model="item.isContractNo" ng-change="updateTest(item)" ng-value="item.isContractNo ? true: false"> -->
-			                    <input class="pull-left" title="เลขบัตรประชาชน" name="isIdCard" type="radio" ng-model="testColumName" ng-change="updateTest()" ng-value="item.columnName"><br /> {{ testColumName }}
+			                    <input class="pull-left" title="เลขที่สัญญา" name="contractNo" type="radio" ng-model="$parent.$parent.$parent.contractNoColumnName" ng-change="updateContractNoColumnName()" ng-value="item.columnName">
+			                    <input class="pull-left" title="เลขบัตรประชาชน" name="idCard" type="radio" ng-model="$parent.$parent.$parent.idCardColumnName" ng-change="updateIdCardColumnName()" ng-value="item.columnName"><br />
 			                    
 			                    <a href="#" e-class="form-control" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
