--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -60,7 +60,7 @@
          <div class="modal-content">
          	<div class="modal-header">
                 <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">เพิ่มบันทึกการติดตาม</h4>
+                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
             </div>
             <div class="modal-body">            	    	
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
