--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -37,7 +37,7 @@
 			                    <span class="pull-right"><small>Col. {{$index + 1}}</small></span>
 			                    <input class="pull-left" title="เปิด/ปิด Notice" type="checkbox" ng-model="item.isNotice" ng-change="updateNotice(item)">
 			                    <input class="pull-left" title="เลขที่สัญญา" name="contractNo" type="radio" ng-model="$parent.$parent.$parent.contractNoColumnName" ng-change="updateContractNoColumnName()" ng-value="item.columnName">
-			                    <input class="pull-left" title="เลขบัตรประชาชน" name="idCard" type="radio" ng-model="$parent.$parent.$parent.idCardColumnName" ng-change="updateIdCardColumnName()" ng-value="item.columnName"><br />
+			                    <input class="pull-left" title="เลขบัตรประชาชน" name="idCardNo" type="radio" ng-model="$parent.$parent.$parent.idCardNoColumnName" ng-change="updateIdCardNoColumnName()" ng-value="item.columnName"><br />
 			                    
 			                    <a href="#" e-class="form-control" style="color: white;" e-style="width: 210px;" buttons="no" onaftersave="update()"
 			                       editable-text="item.columnName"><small>{{ item.columnName }}</small></a><br />
