--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -98,7 +98,7 @@
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span> -->
 				                    
 									<input type="text" name="appointDate" class="form-control datepicker" style="padding-left: 12px;" 
-										   date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" readonly="readonly">
+										   date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate">
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 				                </div>
 							</div>
