--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -87,18 +87,9 @@
 							<div class="form-group">
 								<label class="control-label">วันนัด</label>
 				                <div class="input-group">
-									<!-- <input type="text" tabindex="8" name="birthday" class="form-control" readonly="readonly"
-										   data-provide="datepicker" date-parser="dd/MM/yyyy" 
-										   data-date-format="dd/mm/yyyy"
-										   data-date-autoclose="true"
-										   data-date-today-btn="true"
-										   data-date-clear-btn="true"
-										   data-date-today-highlight="true"
-										   data-date-language="th-en" ng-model="askModalObj.trace.appointDate" ng-change="askModalObj.appointDateClick()">
-				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span> -->
-				                    
-									<input type="text" name="appointDate" class="form-control datepicker" style="padding-left: 12px;" 
-										   date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate">
+									<input type="text" name="appointDate" class="form-control datepickerAppointDate" style="padding-left: 12px;" 
+										   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
+										   ng-change="askModalObj.appointDateClick()">
 				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 				                </div>
 							</div>
@@ -109,7 +100,7 @@
 							<div class="form-group" ng-class="{'has-error':saveAskModalForm.nextTimeDate.$invalid}">
 								<label class="control-label">วันที่ทำครั้งต่อไป</label>
 								<div class="input-group">
-									<input type="text" tabindex="8" name="nextTimeDate" class="form-control" readonly="readonly" required
+									<!-- <input type="text" tabindex="8" name="nextTimeDate" class="form-control" readonly="readonly" required
 										   data-provide="datepicker" date-parser="dd/MM/yyyy" 
 										   data-date-format="dd/mm/yyyy"
 										   data-date-autoclose="true"
@@ -118,6 +109,16 @@
 										   data-date-today-highlight="true"
 										   data-date-language="th-en" ng-model="askModalObj.trace.nextTimeDate" ng-disabled="askModalObj.trace.appointDate">
 									<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+									 -->
+									
+									
+									
+									<input type="text" name="nextTimeDate" class="form-control datepickerNextTimeDate" style="padding-left: 12px;" 
+										   readonly="readonly" required date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.nextTimeDate"
+										   ng-disabled="askModalObj.trace.appointDate">
+				                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+									
+									
 							    </div>
 							</div>
 					
