--- a/backend/src/main/webapp/app/views/working/tab_1.html
+++ b/backend/src/main/webapp/app/views/working/tab_1.html
@@ -1,5 +1,5 @@
 
-<button type="button" class="btn btn-warning btn-circle" ng-click="askModal()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
+<button type="button" class="btn btn-primary btn-circle" ng-click="askModal()" style="position: absolute; right: 15px; top: -33px;"><i class="fa fa-plus"></i></button>
 
 <div class="form-group input-group well well-sm" style="padding-top: 3px; padding-bottom: 3px; margin-bottom: 3px;">
 	<span class="input-group-addon" style="border: 0px; background: none;">
